[package]
name = "doc-lite"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.9.0"
rustyline = "13.0.0"
serde = "1.0.196"
serde_json = "1.0.112"
